[gd_scene load_steps=5 format=2]

[ext_resource path="res://menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/MinimalFont5x7.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_color = Color( 0.941176, 0.964706, 0.941176, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="MainMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.137255, 0.137255, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 360.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 320.0
margin_bottom = 182.0

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer2"]
margin_left = 2.0
margin_right = 317.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Dungeon Detectives"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 320.0
margin_bottom = 59.0
text = "By RojaFox"
align = 1

[node name="Space" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 320.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 5 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 320.0
margin_bottom = 182.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 107.0
margin_right = 213.0
margin_bottom = 110.0

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 106.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0.941176, 0.964706, 0.941176, 1 )
custom_fonts/font = SubResource( 2 )
text = "New Game"

[node name="Load" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 106.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.941176, 0.964706, 0.941176, 1 )
custom_fonts/font = SubResource( 2 )
text = "Load"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 106.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0.941176, 0.964706, 0.941176, 1 )
custom_fonts/font = SubResource( 2 )
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
